[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = [
    "labscript_utils",
    "labscript_profile",
]

[tool.setuptools.package-data]
labscript_profile = ["../labscript-suite.pth"]

[project]
name = "labscript-utils"
description = "Shared utilities for the labscript suite"
authors = [
    {name = "The labscript suite community", email = "labscriptsuite@googlegroups.com"},
]
keywords = ["experiment control", "automation"]
license = {file = 'LICENSE.txt'}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=2.9",
    "numpy>=1.15",
    "packaging>=20.4",
    "pyqtgraph>=0.11.0rc0",
    "qtutils>=4.0",
    "scipy",
    "zprocess>=2.18.0",
    "setuptools_scm>=4.1.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "http://labscriptsuite.org/"
Documentation = "https://docs.labscriptsuite.org/"
Repository = "https://github.com/labscript-suite/labscript-utils/"
Downloads = "https://github.com/labscript-suite/labscript-utils/releases/"
Tracker = "https://github.com/labscript-suite/labscript-utils/issues/"

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==2.0.0",
]

[project.scripts]
labscript-profile-create = "labscript_profile.create:create_profile_cli"
