[metadata]
name = labscript_utils
description = Shared utilities for the labscript suite
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/labscript-utils
    Download=https://github.com/labscript-suite/labscript-utils/releases
    Tracker=https://github.com/labscript-suite/labscript-utils/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = labscript_utils, labscript_profile
python_requires = >=3.6
install_requires =
  importlib_metadata>=1.0 ; python_version<'3.8'
  h5py>=2.9
  numpy>=1.15
  pyqtgraph>=0.11.0rc0 ; python_version>='3.8'
  pyqtgraph ; python_version<'3.8'
  pywin32 ; sys_platform=='win32'
  qtutils>=2.2.3
  scipy
  setuptools_scm
  zprocess>=2.18.0
setup_requires =
  setuptools_scm

[options.package_data]
labscript_profile = ../labscript-suite.pth

[options.entry_points]
console_scripts =
  labscript-profile-create = labscript_profile.create:create_profile
